Updated listing page to pull real data

--- a/frontend/src/components/ItemPage/styles.css
+++ b/frontend/src/components/ItemPage/styles.css
@@ -5,3 +5,14 @@
 .textAlignLeft {
     text-align: left;
 }
+
+.textAlignRight {
+    text-align: right;
+}
+
+
+.detailedViewRowWrapper {
+    padding-bottom: 30px;
+    margin-bottom: 20px;
+
+}
