Added image display and image sorting to item edit page.

--- a/frontend/src/components/ItemPage/styles.css
+++ b/frontend/src/components/ItemPage/styles.css
@@ -20,12 +20,13 @@
 }
 
 .image-gallery-thumbnail {
-  width: 120px
+    width: 120px
 }
 
 .image-gallery-thumbnail img {
-  width: auto;
-  height: 75px;
+    width: auto;
+    height: 75px;
+    object-fit: cover;
 }
 
 .image-gallery-image {
