--- a/frontend/src/components/ItemEditPage/styles.css
+++ b/frontend/src/components/ItemEditPage/styles.css
@@ -32,3 +32,13 @@
     max-width: 100%;
     aspect-ratio: 4 /3;
 }
+
+.sortable-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.sortable-image-wrapper {
+    padding-bottom: calc(var(--bs-gutter-x) * .5);
+}
