Set height of thumbnail in product list card for uniformity

--- a/frontend/src/components/ListItem/styles.css
+++ b/frontend/src/components/ListItem/styles.css
@@ -2,6 +2,11 @@
     margin-bottom: 25px;
 }
 
+.motorcycle-card-img {
+    height: 250px;
+    object-fit: cover;
+}
+
 .shop-item-card-title-col {
     font-weight: 600;
 }
