Added create new motorcycle button in list view and update edit page to support updates and new entries

--- a/frontend/src/components/ItemList/styles.css
+++ b/frontend/src/components/ItemList/styles.css
@@ -20,3 +20,14 @@
     font-weight: 700;
     color: black;
 }
+
+.product-grid-header-add-new-btn {
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+}
+
+.product-grid-header-add-new-btn:hover {
+    font-weight: 700;
+    color: black;
+}
