--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -1,4 +1,5 @@
 .header {
+    padding-top: 10px;
     margin-bottom: 20px;
-    padding-bottom: 30px;
+    box-shadow: 0 5px 10px rgba(0,0,0,.05);
 }
