Updated href to use link to prevent rerendering header and changed styling

--- a/frontend/src/components/ItemPage/styles.css
+++ b/frontend/src/components/ItemPage/styles.css
@@ -1,5 +1,12 @@
 .backToHomeLink {
     cursor: pointer;
+    text-decoration: none !important;
+    color: black;
+}
+
+.backToHomeLink:hover {
+    text-decoration: none;
+    color: black;
 }
 
 .description {
